# cameratransformation

./: .gitignore  CMakeLists.txt  CameraTransformation.cc  CameraTransformation.h  CameraTransformationUnitTest.cc  CustomVideoCoorToCoor.cc  CustomVideoCoorToCoor.h  GeoLocationTest.cpp  PixelToVectorUnitTest.cpp  PointsInPolygon.cpp  PointsInPolygon.h  PointsInPolygonUnitTest.cpp  README.md  convert_gimbal_orientation.py
.github/workflows/: cmake.yml
argvparser/: CMakeLists.txt  argvparser.cc
src/: CMakeLists.txt  CameraTransformation.cc  CameraTransformation.h  CustomVideoCoorToCoor.cc  CustomVideoCoorToCoor.h  PointsInPolygon.cpp
test/: CMakeLists.txt  CameraTransformationUnitTest.cc  GeoLocationTest.cpp  PointsInPolygonUnitTest.cpp
tests/: camera_to_world_test_vectors.csv  test_gimbal_to_world.py
